fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Account_Territory_Temp__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory_Temp__c</fullName>
    <formula>Account.Territory_Temp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Territory Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>