fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/AccountGPO__c.field-meta.xml
<CustomField>
    <fullName>AccountGPO__c</fullName>
    <formula>TEXT( Account.Main_GPO__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account GPO</label>
    <type>Text</type>
</CustomField>