fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <description>Hidden field to help with Eloqua campaign with Surgical</description>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>