fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/AmountofPolymerLost__c.field-meta.xml
<CustomField>
    <fullName>AmountofPolymerLost__c</fullName>
    <inlineHelpText>Dollar Amount of Polymer that wil be replaced by Auto Ligation in the next 12 months</inlineHelpText>
    <label>Amount of Polymer Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>