fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ANZ_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Opportunities migrated from AU Instance.</description>
    <inlineHelpText>Used to identify Opportunities migrated from AU Instance.</inlineHelpText>
    <label>ANZ Opportunity</label>
    <type>Checkbox</type>
</CustomField>