fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this opportunity is at risk of being closed lost then it must be checked.</description>
    <inlineHelpText>If this opportunity is at risk of being closed lost then it must be checked.</inlineHelpText>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>