fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Average_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_to_Close__c</fullName>
    <formula>if(CloseDate &gt; DATEVALUE(First_Stage_Date_Time__c),
CEILING(CloseDate - DATEVALUE(First_Stage_Date_Time__c)),
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>