fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Bariatrics__c.field-meta.xml
<CustomField>
    <fullName>Bariatrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data load testing.</description>
    <inlineHelpText>Data load testing.</inlineHelpText>
    <label>Bariatrics</label>
    <type>Checkbox</type>
</CustomField>