fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>For Latin America Product Family choices. Only Latin America should see this.</description>
    <inlineHelpText>Choose a Business Unit to see the Product Families for that Business Unit.</inlineHelpText>
    <label>Business Unit Old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Interventional Capital</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>LMA</fullName>
            </value>
            <value>
                <fullName>Vidacare</fullName>
            </value>
            <value>
                <fullName>AEMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>