fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Formula__c</fullName>
    <formula>TEXT( Owner.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>