fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/CarryOverPolymerAmmount__c.field-meta.xml
<CustomField>
    <fullName>CarryOverPolymerAmmount__c</fullName>
    <formula>IF( AND(One_Time_Sale__c, YEAR(CloseDate) &gt; YEAR(Today()) ) , AmountofPolymerLost__c , IF( AND(One_Time_Sale__c, YEAR(CloseDate) = YEAR(Today()) ) , 0 , AmountofPolymerLost__c - CurrentYearPolymerImpact__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carry Over Polymer Ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>