fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Check_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Check_Business_Unit__c</fullName>
    <formula>AND(
Business_Unit_Formula__c &lt;&gt; TEXT(Business_Unit_GPL__c),
NOT(ISBLANK(TEXT(Business_Unit_GPL__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the Owner BU does not match the Opportunity Business Unit</inlineHelpText>
    <label>Check Business Unit</label>
    <type>Checkbox</type>
</CustomField>