fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Check_NPT_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Check_NPT_Product_of_Interest__c</fullName>
    <formula>AND(
NOT(ISBLANK(New_Product_Tracking_Rule__c)),
NOT(ISBLANK(TEXT(Product_of_Interest_GPL__c))),
UPPER(TEXT(Product_of_Interest_GPL__c)) &lt;&gt; UPPER(New_Product_Tracking_Rule__r.Product__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the Product of Interest does not match the rule Product of Interest</inlineHelpText>
    <label>Check NPT Product of Interest</label>
    <type>Checkbox</type>
</CustomField>