fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Close_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Actual__c</fullName>
    <label>Close Date Actual</label>
    <type>DateTime</type>
</CustomField>