fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Close_Date_Count__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Count__c</fullName>
    <inlineHelpText>Number of times Close Date has Changed</inlineHelpText>
    <label>Close Date Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>