fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ClosedLostAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>ClosedLostAdditionalDetails__c</fullName>
    <label>Closed Lost Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>