fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ClosedWonAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonAdditionalDetails__c</fullName>
    <label>Closed Won Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>