fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Confidence_Rating__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Rating__c</fullName>
    <label>Confidence Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>