fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Confidence_Rating_LatAm__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Rating_LatAm__c</fullName>
    <inlineHelpText>How confident are you that we will win this business?</inlineHelpText>
    <label>Confidence Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>