fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ContactIDFromSurgicalTask__c.field-meta.xml
<CustomField>
    <fullName>ContactIDFromSurgicalTask__c</fullName>
    <label>Contact ID From Surgical Task</label>
    <length>20</length>
    <type>Text</type>
</CustomField>