fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/ContactRolefromLead__c.field-meta.xml
<CustomField>
    <fullName>ContactRolefromLead__c</fullName>
    <inlineHelpText>Information came over from Lead and should be applied to the Role on the Contact Role Object</inlineHelpText>
    <label>Contact Role from Lead</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>