fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Contacts_Email__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Email__c</fullName>
    <description>Field brought over from Australia data integration.</description>
    <label>Contacts Email</label>
    <type>Email</type>
</CustomField>