fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Contract_Non_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract_Non_Contract__c</fullName>
    <description>Field brought over from Australia data integration.</description>
    <label>Contract/Non-Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Non-Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>