fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <description>For use in Trending dashboard objects</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (2)</label>
    <type>Date</type>
</CustomField>