fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Created_from_Price_Quote__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Price_Quote__c</fullName>
    <description>Used for reporting when an opportunity was created from a price quote</description>
    <formula>NOT(ISBLANK(Price_Quote__c))</formula>
    <inlineHelpText>Used for reporting when an opportunity was created from a price quote</inlineHelpText>
    <label>Created from Price Quote</label>
    <type>Checkbox</type>
</CustomField>