fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Current_Financial_Year_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Year_Opportunity_Value__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Current Financial Year Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>