fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Current_Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Month__c</fullName>
    <formula>Current_Fiscal_Month_Number__c &lt; MONTH(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Month</label>
    <type>Checkbox</type>
</CustomField>