fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Current_Fiscal_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Month_Number__c</fullName>
    <formula>/* 2023 */
if(TODAY() &gt; DATEVALUE(&quot;2023-12-04&quot;), 12,
if(TODAY() &gt; DATEVALUE(&quot;2023-11-06&quot;), 11,
if(TODAY() &gt; DATEVALUE(&quot;2023-10-02&quot;), 10,
if(TODAY() &gt; DATEVALUE(&quot;2023-09-05&quot;), 9,
if(TODAY() &gt; DATEVALUE(&quot;2023-08-07&quot;), 8,
if(TODAY() &gt; DATEVALUE(&quot;2023-07-03&quot;), 7,
if(TODAY() &gt; DATEVALUE(&quot;2023-06-05&quot;), 6,
if(TODAY() &gt; DATEVALUE(&quot;2023-05-08&quot;), 5,
if(TODAY() &gt; DATEVALUE(&quot;2023-04-03&quot;), 4,
if(TODAY() &gt; DATEVALUE(&quot;2023-03-06&quot;), 3,
if(TODAY() &gt; DATEVALUE(&quot;2023-02-06&quot;), 2,
if(TODAY() &gt; DATEVALUE(&quot;2023-01-01&quot;), 1,


/* 2022 */
if(TODAY() &gt; DATEVALUE(&quot;2022-11-28&quot;), 12,
if(TODAY() &gt; DATEVALUE(&quot;2022-10-31&quot;), 11,
if(TODAY() &gt; DATEVALUE(&quot;2022-09-26&quot;), 10,
if(TODAY() &gt; DATEVALUE(&quot;2022-08-29&quot;), 9,
if(TODAY() &gt; DATEVALUE(&quot;2022-08-01&quot;), 8,
if(TODAY() &gt; DATEVALUE(&quot;2022-06-27&quot;), 7,
if(TODAY() &gt; DATEVALUE(&quot;2022-05-31&quot;), 6,
if(TODAY() &gt; DATEVALUE(&quot;2022-05-02&quot;), 5,
if(TODAY() &gt; DATEVALUE(&quot;2022-03-28&quot;), 4,
if(TODAY() &gt; DATEVALUE(&quot;2022-02-28&quot;), 3,
if(TODAY() &gt; DATEVALUE(&quot;2022-01-31&quot;), 2,
if(TODAY() &gt; DATEVALUE(&quot;2022-01-01&quot;), 1,
0
))))))))))))
))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>