fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Current_Product_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_In_Use__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Current Product In Use</label>
    <length>80</length>
    <type>Text</type>
</CustomField>