fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Current_RSM_Comment__c.field-meta.xml
<CustomField>
    <fullName>Current_RSM_Comment__c</fullName>
    <label>Current RSM Comment</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>