fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/CurrentYearPolymerImpact__c.field-meta.xml
<CustomField>
    <fullName>CurrentYearPolymerImpact__c</fullName>
    <formula>IF( AND( One_Time_Sale__c , YEAR(CloseDate) = YEAR(Today()) ) , AmountofPolymerLost__c , IF( AND( One_Time_Sale__c , YEAR(CloseDate) &gt; YEAR(Today()) ) , 0 , IF( AND( YEAR(CloseDate) = YEAR(Today()) , NOT(One_Time_Sale__c) ) , (AmountofPolymerLost__c/365) * (DATE(( YEAR( CloseDate )) ,12,31) - CloseDate) , IF( AND( NOT(One_Time_Sale__c) , YEAR(CloseDate) &gt; YEAR(Today()) ) , 0 , IF( AND( NOT(One_Time_Sale__c) , YEAR(CloseDate) &lt; YEAR(Today()) ) , (AmountofPolymerLost__c/365) * (DATE(( YEAR( CloseDate )) ,12,31) - CloseDate) , AmountofPolymerLost__c )) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Polymer Amount that will be considered a sale this year. Determined by Close Date on Opportunity.</inlineHelpText>
    <label>Current Year Polymer Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>