fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Custom_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Custom_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Conversion</label>
    <type>Checkbox</type>
</CustomField>