fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Days_From_Create_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Create_to_Close__c</fullName>
    <formula>CloseDate - DateValue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Create to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>