fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/DocMatter__c.field-meta.xml
<CustomField>
    <fullName>DocMatter__c</fullName>
    <formula>TEXT(Primary_Contact__r.DocMatter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocMatter</label>
    <type>Text</type>
</CustomField>