fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/DocMatterQualifier__c.field-meta.xml
<CustomField>
    <fullName>DocMatterQualifier__c</fullName>
    <formula>TEXT(Primary_Contact__r.DocMatterQualifier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocMatter Qualifier</label>
    <type>Text</type>
</CustomField>