fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/EloquaCheckBox__c.field-meta.xml
<CustomField>
    <fullName>EloquaCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box is to notify Eloqua that a new task has been logged and that it needs to evaluate this Opportunity</description>
    <label>Eloqua Check Box</label>
    <type>Checkbox</type>
</CustomField>