fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Everyday_Airway_Target__c.field-meta.xml
<CustomField>
    <fullName>Everyday_Airway_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Everyday Airway Target</label>
    <type>Checkbox</type>
</CustomField>