fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/First_Stage__c.field-meta.xml
<CustomField>
    <fullName>First_Stage__c</fullName>
    <label>First Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>