fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/First_Stage_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Stage_Date_Time__c</fullName>
    <label>First Stage Date/Time</label>
    <type>DateTime</type>
</CustomField>