fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Funding_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funding_Approval_Stage__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Funding Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unfunded at this stage</fullName>
            </value>
            <value>
                <fullName>Under Application</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>