fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire Purchase</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Outright Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>