fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Incumbent_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Competitor__c</fullName>
    <description>Field from Australia Instance.</description>
    <label>Incumbent Competitor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>