fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Inside_Sales_Opp__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the Opportunity is owned by an Inside Sales person.</description>
    <inlineHelpText>Only check if you are an Inside Sales person or if you are creating this Opportunity for an Inside Sales person.</inlineHelpText>
    <label>Inside Sales Opp</label>
    <type>Checkbox</type>
</CustomField>