fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Last_Stage_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Date_Time__c</fullName>
    <label>Last Stage Date/Time</label>
    <type>DateTime</type>
</CustomField>