fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/LeadNotes__c.field-meta.xml
<CustomField>
    <fullName>LeadNotes__c</fullName>
    <inlineHelpText>Notes that come over from the Lead during Conversion</inlineHelpText>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>