fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/LMA_Unique_PVC_to_SIL_Target__c.field-meta.xml
<CustomField>
    <fullName>LMA_Unique_PVC_to_SIL_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMA Unique PVC to SIL Target</label>
    <type>Checkbox</type>
</CustomField>