fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>if(NOT(ISBLANK(Owner.ManagerId)),
Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>