fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/New_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Item_Number__c</fullName>
    <description>What is the item number for this opportunity.</description>
    <inlineHelpText>What is the item number for this opportunity.</inlineHelpText>
    <label>New Item #</label>
    <type>TextArea</type>
</CustomField>